[package]
name = "simplecrypt"
description = "simple wrapper around sodiumoxide (libsodium) to easily encrypt and decrypt data with a secret key"
version = "1.0.0"
authors = ["Jonas <me@jbrn.eu>"]
license = "MIT"
edition = "2018"
exclude = [
    ".github"
]

[dependencies]
sodiumoxide = "0.2.5"
thiserror = "1.0.16"