[package]
name = "simplecrypt"
description = "simple wrapper around sodiumoxide (libsodium) to easily encrypt and decrypt data with a secret key"
version = "1.0.2"
authors = ["Jonas <me@jbrn.eu>"]
license = "MIT"
repository = "https://github.com/j-brn/simplecrypt"
edition = "2018"
exclude = [
    ".github"
]

[dependencies]
sodiumoxide = "0.2.7"
thiserror = "1.0"